--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+jwt.secret=ZGVzdHNlY3JldGFuZHN0cmlnZHQ4Z29hbGxlbnRhbHZpbG8=
+jwt.expiration=3600000
